# tapyoca

./: .gitattributes  README.md  scrap.py  setup.cfg  setup.py
covid/: country_covid_deaths.xlsx  country_covid_deaths_US.xlsx  covid_bar_chart_race.py
darpa/: darpa.py
demonyms/: 01 - Demonyms and adjectives - why are the french so....ipynb  README.md  data_acquisition.py
demonyms/data/: country_demonym.xlsx
parquet_deformations/: parquet_deformations.py
tapyoca/: __init__.py
tapyoca/agglutination/: README.md  __init__.py  data_acquisition.py  partitions.py  py_names.py  standard_lib_gluglus.txt  standard_lib_module_names.csv  words_8116.csv
tapyoca/covid/: __init__.py  country_covid_confirmed.xlsx  country_covid_confirmed_US.xlsx  covid_bar_chart_race.py  readme.md
tapyoca/darpa/: darpa.py
tapyoca/demonyms/: README.md  __init__.py
tapyoca/demonyms/data/: country_demonym.p  demonym_suggested_characteristics.p  what_we_think_about_demonyns.xlsx
tapyoca/indexing_podcasts/: prep.py
tapyoca/parquet_deformations/: __init__.py  parquet_deformations.py  py_fonts.py  readme.md
tapyoca/phoneming/: explore.py
