[metadata]
name = tapyoca
version = 0.0.3
url = https://github.com/thorwhalen/tapyoca
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen
description = A medley of things that got coded because there was an itch to do so
author = thorwhalen
license = Apache Software License
description-file = README.md

[options]
packages = find:
include_package_data = True
zip_safe = False

